--- a/gestionStockLocalRopa.csproj
+++ b/gestionStockLocalRopa.csproj
@@ -47,12 +47,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clases\BaseDatos.cs" />
-    <Compile Include="Clases\Botines.cs" />
-    <Compile Include="Clases\Camisetas.cs" />
     <Compile Include="Clases\Producto.cs" />
     <Compile Include="Clases\Ventas.cs" />
-    <Compile Include="Data\ConexionDB.cs" />
-    <Compile Include="Data\Repositorio.cs" />
+    <Compile Include="Config\ConexionDB.cs" />
+    <Compile Include="Config\Repositorio.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +87,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="AppStockAPI\Controllers\" />
+    <Folder Include="AppStockAPI\Models\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
